test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 16 Feb 2026 03:21:06 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="t1nqPZLFSPsvqfu8A5JQzE9Xd8VWKvTB", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}